[gd_scene load_steps=10 format=2]

[ext_resource path="res://FirstGameAssets/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://FirstGameAssets/Main.gd" type="Script" id=2]
[ext_resource path="res://FirstGameAssets/Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://FirstGameAssets/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://FirstGameAssets/art/gameover.wav" type="AudioStream" id=5]
[ext_resource path="res://FirstGameAssets/art/House In a Forest Loop.ogg" type="AudioStream" id=6]
[ext_resource path="res://FirstGameAssets/SkeletonIK.gd" type="Script" id=7]
[ext_resource path="res://new_script.gd" type="Script" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
Mob = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 720.0
color = Color( 0.0980392, 0.0431373, 0.47451, 1 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkeletonIK" type="SkeletonIK" parent="ColorRect"]
process_priority = 1
script = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="MobTimer" type="Timer" parent="."]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobPath" type="Path2D" parent="."]
visible = false
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 307.222, 0 )
offset = 307.016

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
